# docs/swagger.yaml
@@ -12,10 +12,10 @@ definitions:
   account.Identity:
     properties:
       account:
-        $ref: '#/definitions/ent.Account'
+        $ref: '#/definitions/account.ResponseAccount'
       profiles:
         items:
-          $ref: '#/definitions/ent.Profile'
+          $ref: '#/definitions/account.ResponseProfile'
         type: array
     type: object
   account.PublicResponse:
@@ -30,6 +30,81 @@ definitions:
     - email
     - id
     - password
+    type: object
+  account.ResponseAccount:
+    properties:
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      email:
+        description: Email holds the value of the "email" field.
+        type: string
+      id:
+        description: ID of the ent.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
+    type: object
+  account.ResponseProfile:
+    properties:
+      avatar:
+        description: Avatar holds the value of the "avatar" field.
+        type: string
+      call:
+        description: Call holds the value of the "call" field.
+        type: string
+      category:
+        description: Category holds the value of the "category" field.
+        type: string
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      id:
+        description: ID of the ent.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      title:
+        description: Title holds the value of the "title" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
+    type: object
+  account.ResponseToken:
+    properties:
+      body:
+        description: Body holds the value of the "body" field.
+        type: string
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      expire:
+        description: Expire holds the value of the "expire" field.
+        type: string
+      id:
+        description: ID of the ent.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      type:
+        description: Type holds the value of the "type" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
     type: object
   ent.Account:
     properties:
@@ -283,6 +358,29 @@ definitions:
     required:
     - title
     type: object
+  episode.ResponseEpisode:
+    properties:
+      content:
+        description: Content holds the value of the "content" field.
+        type: string
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      id:
+        description: ID of the ent.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      title:
+        description: Title holds the value of the "title" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
+    type: object
   errs.HTTPError:
     properties:
       code:
@@ -305,6 +403,41 @@ definitions:
     - mime
     - size
     type: object
+  file.ResponseFile:
+    properties:
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      filename:
+        description: Filename holds the value of the "filename" field.
+        type: string
+      id:
+        description: ID of the ent.
+        type: string
+      mime:
+        description: Mime holds the value of the "mime" field.
+        type: string
+      note:
+        description: Note holds the value of the "note" field.
+        type: string
+      path:
+        description: Path holds the value of the "path" field.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      size:
+        description: Size holds the value of the "size" field.
+        type: integer
+      status:
+        description: Status holds the value of the "status" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
+    type: object
   profile.Profile:
     properties:
       call:
@@ -317,6 +450,61 @@ definitions:
     - call
     - category
     - title
+    type: object
+  profile.ResponseProfile:
+    properties:
+      avatar:
+        description: Avatar holds the value of the "avatar" field.
+        type: string
+      call:
+        description: Call holds the value of the "call" field.
+        type: string
+      category:
+        description: Category holds the value of the "category" field.
+        type: string
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      id:
+        description: ID of the ent.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      title:
+        description: Title holds the value of the "title" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
+    type: object
+  series.ResponseSeries:
+    properties:
+      call:
+        description: Call holds the value of the "call" field.
+        type: string
+      content:
+        description: Content holds the value of the "content" field.
+        type: string
+      create_time:
+        description: CreateTime holds the value of the "create_time" field.
+        type: string
+      edges:
+        type: object
+      id:
+        description: ID of the ent.
+        type: string
+      sid:
+        description: Sid holds the value of the "sid" field.
+        type: string
+      title:
+        description: Title holds the value of the "title" field.
+        type: string
+      update_time:
+        description: UpdateTime holds the value of the "update_time" field.
+        type: string
     type: object
   series.TitleContent:
     properties:
@@ -364,7 +552,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.Token'
+            $ref: '#/definitions/account.ResponseToken'
         "400":
           description: Bad Request
           schema:
@@ -380,7 +568,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.Token'
+            $ref: '#/definitions/account.ResponseToken'
         "400":
           description: Bad Request
           schema:
@@ -423,7 +611,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/ent.Episode'
+              $ref: '#/definitions/episode.ResponseEpisode'
             type: array
         "400":
           description: Bad Request
@@ -448,7 +636,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.Episode'
+            $ref: '#/definitions/episode.ResponseEpisode'
         "400":
           description: Bad Request
           schema:
@@ -478,7 +666,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.Episode'
+            $ref: '#/definitions/episode.ResponseEpisode'
         "400":
           description: Bad Request
           schema:
@@ -537,7 +725,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.Episode'
+            $ref: '#/definitions/episode.ResponseEpisode'
         "400":
           description: Bad Request
           schema:
@@ -567,7 +755,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.File'
+            $ref: '#/definitions/file.ResponseFile'
         "400":
           description: Bad Request
           schema:
@@ -594,7 +782,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.File'
+            $ref: '#/definitions/file.ResponseFile'
         "400":
           description: Bad Request
           schema:
@@ -631,10 +819,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.File'
+        "201":
+          description: ""
         "400":
           description: Bad Request
           schema:
@@ -664,7 +850,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.File'
+            $ref: '#/definitions/file.ResponseFile'
         "400":
           description: Bad Request
           schema:
@@ -699,7 +885,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.File'
+            $ref: '#/definitions/file.ResponseFile'
         "400":
           description: Bad Request
           schema:
@@ -708,23 +894,6 @@ paths:
       tags:
       - file
   /profile:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/ent.Profile'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/errs.HTTPError'
-      summary: get all self profiles
-      tags:
-      - profile
     post:
       consumes:
       - application/json
@@ -741,7 +910,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.Profile'
+            $ref: '#/definitions/profile.ResponseProfile'
         "400":
           description: Bad Request
           schema:
@@ -763,7 +932,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.Profile'
+            $ref: '#/definitions/profile.ResponseProfile'
         "400":
           description: Bad Request
           schema:
@@ -792,7 +961,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.Profile'
+            $ref: '#/definitions/profile.ResponseProfile'
         "400":
           description: Bad Request
           schema:
@@ -814,7 +983,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.Series'
+            $ref: '#/definitions/series.ResponseSeries'
         "400":
           description: Bad Request
           schema:
@@ -844,7 +1013,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/ent.Series'
+            $ref: '#/definitions/series.ResponseSeries'
         "400":
           description: Bad Request
           schema:
@@ -868,10 +1037,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.Series'
+        "204":
+          description: ""
         "400":
           description: Bad Request
           schema:
@@ -905,7 +1072,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ent.Series'
+            $ref: '#/definitions/series.ResponseSeries'
         "400":
           description: Bad Request
           schema:
