# web/account/views.go
@@ -74,13 +74,18 @@ func register(ctx *gin.Context, store *data.Store) (int, interface{}, error) {
 	return http.StatusCreated, responseData, nil
 }
 
+type ResponseToken struct {
+	*ent.Token
+	value.NoEdges
+}
+
 // login godoc
 // @Summary login an account
 // @Tags account
 // @Accept json
 // @Produce json
 // @Param accountInfo body EmailPassword true "account info"
-// @Success 201 {object} ent.Token
+// @Success 201 {object} ResponseToken
 // @Failure 400 {object} errs.HTTPError
 // @Router /account/login [post]
 func login(ctx *gin.Context, store *data.Store) (int, interface{}, error) {
@@ -105,13 +110,25 @@ func login(ctx *gin.Context, store *data.Store) (int, interface{}, error) {
 		return 0, nil, err
 	}
 
-	return http.StatusCreated, t, nil
+	return http.StatusCreated, &ResponseToken{
+		Token: t,
+	}, nil
 	//ctx.SetCookie(value.StringRefreshToken, t.Body, int(t.ExpireTime.Sub(time.Now()).Seconds()), "/account/refresh", store.Config().Domain, false, true)
 }
 
+type ResponseAccount struct {
+	*ent.Account
+	value.NoEdges
+}
+
+type ResponseProfile struct {
+	*ent.Profile
+	value.NoEdges
+}
+
 type Identity struct {
-	Account  *ent.Account   `json:"account"`
-	Profiles []*ent.Profile `json:"profiles"`
+	Account  *ResponseAccount   `json:"account"`
+	Profiles []*ResponseProfile `json:"profiles"`
 }
 
 // info godoc
@@ -123,9 +140,19 @@ type Identity struct {
 // @Router /account [get]
 func info(_ *gin.Context, _ *data.Store, identity *controller.Identity) (int, interface{}, error) {
 
+	profiles := make([]*ResponseProfile, len(identity.AllProfiles()))
+
+	for i, profile := range identity.AllProfiles() {
+		profiles[i] = &ResponseProfile{
+			Profile: profile,
+		}
+	}
+
 	return http.StatusOK, &Identity{
-		Account:  identity.Account(),
-		Profiles: identity.AllProfiles(),
+		Account: &ResponseAccount{
+			Account: identity.Account(),
+		},
+		Profiles: profiles,
 	}, nil
 }
 
