# web/profile/routers.go
@@ -10,7 +10,7 @@ import (
 func Routers(group *gin.RouterGroup, ctrl controller.Controller) {
 	group.GET("/:id", middleware.MustUriUUID, ctrl.Bare(get))
 	group.Use(account.MustLogin)
-	group.GET("/", ctrl.General(accountProfiles))
+	//group.GET("/", ctrl.General(accountProfiles))
 	group.POST("/", ctrl.General(create))
 	group.PUT("/:pid", MustProfile, ctrl.Owned(owned), ctrl.General(update))
 
